[package]
name = "leptos-session-store"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:http-body-util",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
  "dep:axum-aws-lambda",
  "dep:lambda_http",
]
http-body = ["dep:http-body"]


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# These dev profiles smooth development without the --release flag
[profile.wasm-dev]
inherits = "dev"
opt-level = 'z'

[profile.server-dev]
inherits = "dev"
opt-level = 2

[package.metadata.lambda.deploy]
memory = 128
timeout = 3
tracing = "active"
env_file = ".env.production"
role = "arn:aws:iam::637423396664:role/session-store_signup_delete_login"
runtime = "provided.al2023"

[package.metadata.leptos]
bin-profile-dev = "server-dev"
lib-profile-dev = "wasm-dev"

output-name = "leptos_session_store"
site-root = "target/site"
site-package-dir = "pkg"

asset-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
watch = false
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = { version = "0.8.4", optional = true }
axum-aws-lambda = { version = "0.10.0", optional = true }
cfg-if = "1.0.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "1.3.1"
http-body = { version = "1.0.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
lambda_http = { version = "0.17.0", optional = true }
leptos = { version = "0.8.9" }
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = {version = "0.8.5"}
leptos_router = "0.8.7"
log = "0.4.28"
simple_logger = "5.0.0"
thiserror = "2.0.16"

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"], optional = true}
tower = {version = "0.5.2", optional = true}
tower-http = {version = "0.6.6", optional = true, features = ["fs"]}
tracing = { version = "0.1.41", optional = true }
wasm-bindgen = "0.2.104"
